fix: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
-
 python-dotenv
 tqdm
 pdfplumber
-transformers==4.35.2
+transformers>=4.39.0
 torch
 faiss-cpu
-
-
-langchain
-langchain-community
-langchain-core
-langchain-huggingface
-
-
-chainlit
-
-
+langchain>=0.1.16
+langchain-community>=0.0.32
+langchain-core>=0.1.22
+langchain-huggingface>=0.1.1
+streamlit
 sentence-transformers
