--- a/company_mapping.json
+++ b/company_mapping.json
@@ -4,5 +4,6 @@
   "____b6783829": "台積電",
   "___60243116": "聯電",
   "___ea53672a": "廣達",
-  "____aa5c2d63": "台達電"
+  "____aa5c2d63": "台達電",
+  "____28dfe2e0": "國泰金"
 }
