修改主程式

--- a/company_mapping.json
+++ b/company_mapping.json
@@ -5,5 +5,6 @@
   "___60243116": "聯電",
   "___ea53672a": "廣達",
   "____aa5c2d63": "台達電",
-  "____28dfe2e0": "國泰金"
+  "____28dfe2e0": "國泰金",
+  "____ac4a9dd1": "玉山金"
 }
